--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     创新点：直观呈现数学运算
     关于AI：
             本作品在编程阶段几乎未使用任何AIGC（除了vscode内置的Copilot偶尔会给我自动补全代码）
-            但是在开始之前，我通过指导Gemini-3.0-pro完成了另一个作品https://ranger-liang.github.io/Dynamic-Demonstrate-of-Transformer/，
+            但是在开始之前，我通过指导Gemini-3.0-pro完成了另一个作品(Transformer 架构的动态展示)
+            https://ranger-liang.github.io/Dynamic-Demonstrate-of-Transformer/
             本作品的代码架构和部分细节设计参考了该作品（对该作品的深入分析和学习是我网页制作知识的主要来源。）
     -->       
 </head>
@@ -24,6 +25,14 @@
     </h1>
     
     <div class="control_panel">
+        <div class="controller">
+            <label>Layer type: </label>
+            <select id="type">
+                <option value="0" selected>Conv2d</option>
+                <option value="1">Max pooling</option>
+                <option value="2">Avg pooling</option>
+            </select>
+        </div>
         <div class="controller">
             <label>Input Size: </label>
             <input type="number" id="input_size" value="7" min="3" max="10">
