--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     知识点： 抽象化、模块化、分治范式
     创新点：直观呈现数学运算
     关于AI：
-            本作品在编程阶段几乎未使用任何AIGC（除了vscode内置的Copilot偶尔会给我自动补全代码）
-            但是在开始之前，我通过指导Gemini-3.0-pro完成了另一个作品(Transformer 架构的动态展示)
-            https://ranger-liang.github.io/Dynamic-Demonstrate-of-Transformer/
-            本作品的代码架构和部分细节设计参考了该作品（对该作品的深入分析和消融是我网页制作知识的主要来源。）
+            编程阶段：
+                几乎未使用任何AIGC（除了vscode内置的Copilot偶尔会给我自动补全代码）
+                还有README文档是AI写的
+            准备阶段：
+                但是在开始之前，我通过指导Gemini-3.0-pro完成了另一个作品(Transformer 架构的动态展示 https://ranger-liang.github.io/Dynamic-Demonstrate-of-Transformer/)
+                本作品的代码架构和部分细节设计参考了该作品（对该作品的深入分析和消融是我网页制作知识的主要来源。）
     -->       
 </head>
 
