--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
     <!--    
-    作品概念：CNN动态展示
+    作品概念：CNN动态演示
     知识点： 抽象化、模块化、分治范式
     创新点：直观呈现数学运算
     关于AI：
@@ -23,8 +23,12 @@
 <body>
     
     <h1>
-        CNN Demo
+        Dynamic Demonstrate of Convolutional Neural Networks
     </h1>
+    <p id="describe">
+        If you want to know more details about CNN, please click <a href="https://d2l.ai/chapter_convolutional-neural-networks/why-conv.html" target="_blank">here</a> 
+        (<a href="https://zh-v2.d2l.ai/chapter_convolutional-neural-networks/why-conv.html" target="_blank">中文版</a>) to learn.
+    </p>
     
     <div class="parameters">
         <div>
